Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
BTICardAPI ERRVAL __stdcall BTICard_TSMDriftWr(INT drift,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputDelayCompGet(LPINT delayptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputDelayCompSet(INT delay,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputThresholdAuto(INT pinindex,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputThresholdGet(LPUSHORT dacval,INT pinindex,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputThresholdSet(USHORT dacval,INT pinindex,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGControlRd(LPULONG ctrlptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGControlWr(ULONG ctrlval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGYearsRd(LPULONG year,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGYearsWr(ULONG year,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMJumpThresholdGet(LPULONG drift,LPULONG offset,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMJumpThresholdSet(ULONG drift,ULONG offset,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMReset(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMSourceConfig(ULONG sourcecfg,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMStatus(LPULONG statusptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMSyncConfig(ULONG timeconfig,ULONG driftconfig,HCORE handleval);
BTICardAPI INT __stdcall BTICard_ValAsciiCmpi(LPSTR str1,LPSTR str2);
BTICardAPI LPSTR __stdcall BTICard_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);
BTICardAPI VOID __stdcall BTICard_ValAsciiTrimLead(LPSTR buf);
BTICardAPI VOID __stdcall BTICard_ValAsciiTrimTrail(LPSTR buf);
BTICardAPI ULONG __stdcall BTICard_ValFromAscii(LPCSTR asciistr,INT radixval);
BTICardAPI ULONG __stdcall BTICard_ValGetBits(ULONG oldvalue,INT startbit,INT endbit);
BTICardAPI LPSTR __stdcall BTICard_ValIncAscii(LPSTR asciistr);
BTICardAPI LPSTR __stdcall BTICard_ValInccAscii(LPSTR asciistr);
BTICardAPI BOOL __stdcall BTICard_ValIsLower(INT value);
BTICardAPI INT __stdcall BTICard_ValLenAscii(INT numbits,INT radixval);
BTICardAPI ULONG __stdcall BTICard_ValPutBits(ULONG oldvalue,ULONG newfld,INT startbit,INT endbit);
BTICardAPI LPSTR __stdcall BTICard_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);
BTICardAPI INT __stdcall BTICard_ValToUpper(INT value);
BTICardAPI ULONG __stdcall BTICard_VARRdL(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_VARRdsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_VARRdW(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_VARWrL(ULONG value,USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_VARWrsW(LPUSHORT valueptr,USHORT addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_VARWrW(USHORT value,USHORT addrval,HCORE handleval);
extern "C" BTICardAPI BOOL   BUSBox_SerialMode;
extern "C" BTICardAPI INT    BUSBox_BaudRate;
extern BTICardAPI BOOL   BUSBox_SerialMode;
extern BTICardAPI INT    BUSBox_BaudRate;
/**
*
*  Core number constants
*
**/

enum {	COREA              = 0x0000,               //Selects Core A
		COREB              = 0x0001,               //Selects Core B
		COREC              = 0x0002,               //Selects Core C
		CORED              = 0x0003                //Selects Core D
};
/**
*
*  Sequential Record configuration options
*
**/

enum {	SEQCFG_DEFAULT     = 0x00000000L,          //Select all default settings
		SEQCFG_FILLHALT    = 0x00000000L,          //Enable sequential record in fill and halt mode (default)
		SEQCFG_DISABLE     = 0x00000001L,          //Disable sequential record
		SEQCFG_CONTINUOUS  = 0x00000002L,          //Enable sequential record in continuous mode
		SEQCFG_DMA         = 0x00000004L,          //Enable monitor in DMA mode
		SEQCFG_FREE        = 0x00000008L,          //Enable sequential record in free mode
		SEQCFG_DELTA       = 0x00000010L,          //Enable sequential record in delta mode
		SEQCFG_INTERVAL    = 0x00000020L,          //Enable sequential record in interval mode
		SEQCFG_NOLOGFULL   = 0x00000000L,          //Do not generate event log when sequential record is full (default)
		SEQCFG_LOGFULL     = 0x00001000L,          //Generate event log when sequential record is full
		SEQCFG_NOLOGFREQ   = 0x00000000L,          //Do not generate event logs at a user specified frequency (default)
		SEQCFG_LOGFREQ     = 0x00002000L,          //Generate event logs at user specified frequency
		SEQCFG_TCPNODELAY  = 0x00004000L,          //Disable Nagle's algorithm on sequential DMA for RPC devices
		SEQCFG_16K         = 0x00000000L,          //Allocate a 16K sequential record buffer (default)
		SEQCFG_ALLAVAIL    = 0x01000000L,          //Allocate all available memory to a sequential record buffer
		SEQCFG_32K         = 0x02000000L,          //Allocate a 32K sequential record buffer
		SEQCFG_64K         = 0x04000000L,          //Allocate a 64K sequential record buffer
		SEQCFG_128K        = 0x08000000L           //Allocate a 128K sequential record buffer
};
/**
*
*  Sequential Record type fields
*
**/

enum {	SEQTYPE_MASK       = 0x00FF,               //Sequential record type mask value
		SEQTYPE_429        = 0x0001,               //Sequential record type is ARINC 429
		SEQTYPE_717        = 0x0002,               //Sequential record type is ARINC 717
		SEQTYPE_1553       = 0x0003,               //Sequential record type is MIL-STD-1553
		SEQTYPE_708        = 0x0004,               //Sequential record type is ARINC 708
		SEQTYPE_USER       = 0x0005,               //Sequential record type is User Defined
		SEQTYPE_CSDB       = 0x0006,               //Sequential record type is CSDB
		SEQTYPE_DIO        = 0x0007,               //Sequential record type is DIO
		SEQTYPE_EBR        = 0x0008,               //Sequential record type is EBR-1553
		SEQTYPE_717SF      = 0x0009,               //Sequential record type is ARINC 717 Subframe
		SEQTYPE_PMC10      = 0x000A,               //Sequential record type is PMC10
		SEQTYPE_RESTART    = 0x00FF                //Sequential record type is Restart
};
/**
*
*  Sequential Record version fields
*
**/

enum {	SEQVER_MASK        = 0xFF00,               //Sequential record version mask value
		SEQVER_0           = 0x0000,               //Sequential record version number is 0
		SEQVER_1           = 0x0100                //Sequential record version number is 1
};
/**
*
*  Event log list configuration options
*
**/

enum {	LOGCFG_DEFAULT     = 0x00000000L,          //Select all default settings
		LOGCFG_ENABLE      = 0x00000000L,          //Enable event log list (default)
		LOGCFG_DISABLE     = 0x00000001L           //Disable event log list
};
/**
*
*  IRIG timer configuration options
*
**/

enum {	IRIGCFG_DEFAULT    = 0x00000000L,          //Select all default settings
		IRIGCFG_ENABLE     = 0x00000000L,          //Enable IRIG timer (default)
		IRIGCFG_DISABLE    = 0x00000001L,          //Disable IRIG timer
		IRIGCFG_SPEEDB     = 0x00000000L,          //Bit rate is IRIGB (default)
		IRIGCFG_SPEEDA     = 0x00000002L,          //Bit rate is IRIGA
		IRIGCFG_INTERNAL   = 0x00000000L,          //IRIG timer operates internally (default)
		IRIGCFG_EXTERNAL   = 0x00000004L,          //IRIG timer operates externally
		IRIGCFG_SLAVE      = 0x00000000L,          //IRIG timer is a slave  / receiver (default)
		IRIGCFG_MASTER     = 0x00000008L,          //IRIG timer is a master / transmitter
		IRIGCFG_PPS        = 0x00000010L,          //IRIG timer operates in PPS mode (rcv/xmt)
		IRIGCFG_PWM        = 0x00000000L,          //IRIG timer uses pulse width modulated signaling (rcv/xmt) (default)
		IRIGCFG_AM         = 0x00000020L           //IRIG timer uses amplitude modulated signaling (rcv/xmt, hw dependant)
};
/**
*
*  IRIG timer field definitions
*
**/

enum {	IRIGFIELD_USECLSB  = 0x0000,               //Microseconds LSB in timestamp field
		IRIGFIELD_USECMSB  = 0x000B,               //Microseconds MSB in timestamp field
		IRIGFIELD_MSECLSB  = 0x000C,               //Milliseconds LSB in timestamp field
		IRIGFIELD_MSECMSB  = 0x0017,               //Milliseconds MSB in timestamp field
		IRIGFIELD_SECLSB   = 0x0018,               //Seconds LSB in timestamp field
		IRIGFIELD_SECMSB   = 0x001F,               //Seconds MSB in timestamp field

		IRIGFIELD_MINLSB   = 0x0000,               //Minutes LSB in timestamph field
		IRIGFIELD_MINMSB   = 0x0007,               //Minutes MSB in timestamph field
		IRIGFIELD_HRSLSB   = 0x0008,               //Hours LSB in timestamph field
		IRIGFIELD_HRSMSB   = 0x000F,               //Hours MSB in timestamph field
		IRIGFIELD_DAYLSB   = 0x0010,               //Days LSB in timestamph field
		IRIGFIELD_DAYMSB   = 0x001B                //Days MSB in timestamph field
};