Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDVB.BAS

Public Declare Function BTICard_TSMDriftWr Lib "BTICARD.DLL" Alias "_BTICard_TSMDriftWr@8" (ByVal drift As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMInputDelayCompGet Lib "BTICARD.DLL" Alias "_BTICard_TSMInputDelayCompGet@8" (ByRef delayptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMInputDelayCompSet Lib "BTICARD.DLL" Alias "_BTICard_TSMInputDelayCompSet@8" (ByVal delay As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMInputThresholdAuto Lib "BTICARD.DLL" Alias "_BTICard_TSMInputThresholdAuto@8" (ByVal pinindex As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMInputThresholdGet Lib "BTICARD.DLL" Alias "_BTICard_TSMInputThresholdGet@12" (ByRef dacval As Integer, ByVal pinindex As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMInputThresholdSet Lib "BTICARD.DLL" Alias "_BTICard_TSMInputThresholdSet@12" (ByVal dacval As Integer, ByVal pinindex As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMIRIGControlRd Lib "BTICARD.DLL" Alias "_BTICard_TSMIRIGControlRd@8" (ByRef ctrlptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMIRIGControlWr Lib "BTICARD.DLL" Alias "_BTICard_TSMIRIGControlWr@8" (ByVal ctrlval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMIRIGYearsRd Lib "BTICARD.DLL" Alias "_BTICard_TSMIRIGYearsRd@8" (ByRef year As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMIRIGYearsWr Lib "BTICARD.DLL" Alias "_BTICard_TSMIRIGYearsWr@8" (ByVal year As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMJumpThresholdGet Lib "BTICARD.DLL" Alias "_BTICard_TSMJumpThresholdGet@12" (ByRef drift As Long, ByRef offset As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMJumpThresholdSet Lib "BTICARD.DLL" Alias "_BTICard_TSMJumpThresholdSet@12" (ByVal drift As Long, ByVal offset As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMReset Lib "BTICARD.DLL" Alias "_BTICard_TSMReset@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMSourceConfig Lib "BTICARD.DLL" Alias "_BTICard_TSMSourceConfig@8" (ByVal sourcecfg As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMStatus Lib "BTICARD.DLL" Alias "_BTICard_TSMStatus@8" (ByRef statusptr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_TSMSyncConfig Lib "BTICARD.DLL" Alias "_BTICard_TSMSyncConfig@12" (ByVal timeconfig As Long, ByVal driftconfig As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_ValAsciiCmpi Lib "BTICARD.DLL" Alias "_BTICard_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function BTICard_ValAsciiCpy Lib "BTICARD.DLL" Alias "_BTICard_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Long) As Long
Public Declare Sub BTICard_ValAsciiTrimLead Lib "BTICARD.DLL" Alias "_BTICard_ValAsciiTrimLead@4" (ByRef buf As String)
Public Declare Sub BTICard_ValAsciiTrimTrail Lib "BTICARD.DLL" Alias "_BTICard_ValAsciiTrimTrail@4" (ByRef buf As String)
Public Declare Function BTICard_ValFromAscii Lib "BTICARD.DLL" Alias "_BTICard_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Long) As Long
Public Declare Function BTICard_ValGetBits Lib "BTICARD.DLL" Alias "_BTICard_ValGetBits@12" (ByVal oldvalue As Long, ByVal startbit As Long, ByVal endbit As Long) As Long
Public Declare Function BTICard_ValIncAscii Lib "BTICARD.DLL" Alias "_BTICard_ValIncAscii@4" (ByRef asciistr As String) As Long
Public Declare Function BTICard_ValInccAscii Lib "BTICARD.DLL" Alias "_BTICard_ValInccAscii@4" (ByRef asciistr As String) As Long
Public Declare Function BTICard_ValIsLower Lib "BTICARD.DLL" Alias "_BTICard_ValIsLower@4" (ByVal value As Long) As Long
Public Declare Function BTICard_ValLenAscii Lib "BTICARD.DLL" Alias "_BTICard_ValLenAscii@8" (ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function BTICard_ValPutBits Lib "BTICARD.DLL" Alias "_BTICard_ValPutBits@16" (ByVal oldvalue As Long, ByVal newfld As Long, ByVal startbit As Long, ByVal endbit As Long) As Long
Public Declare Function BTICard_ValToAscii Lib "BTICARD.DLL" Alias "_BTICard_ValToAscii@16" (ByVal value As Long, ByRef asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function BTICard_ValToUpper Lib "BTICARD.DLL" Alias "_BTICard_ValToUpper@4" (ByVal value As Long) As Long
Public Declare Function BTICard_VARRdL Lib "BTICARD.DLL" Alias "_BTICard_VARRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICard_VARRdsW Lib "BTICARD.DLL" Alias "_BTICard_VARRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_VARRdW Lib "BTICARD.DLL" Alias "_BTICard_VARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_VARWrL Lib "BTICARD.DLL" Alias "_BTICard_VARWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Sub BTICard_VARWrsW Lib "BTICARD.DLL" Alias "_BTICard_VARWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_VARWrW Lib "BTICARD.DLL" Alias "_BTICard_VARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long)

'/**
'*
'*  External definitions
'*
'*  Note: To operate the BUSBox in serial (RS-232) mode, set
'*  the BUSBox_SerialMode = TRUE.  Optionally, you can set the
'*  BUSBox_BaudRate = baudvalue, but this defaults to the
'*  suggested 115200 baud.
'*
'**/

'/**
'*
'*  Core number constants
'*
'**/

Public Const COREA As Long = &H0 '//Selects Core A
Public Const COREB As Long = &H1 '//Selects Core B
Public Const COREC As Long = &H2 '//Selects Core C
Public Const CORED As Long = &H3 '//Selects Core D

'/**
'*
'*  Sequential Record configuration options
'*
'**/

Public Const SEQCFG_DEFAULT As Long = &H0    '//Select all default settings
Public Const SEQCFG_FILLHALT As Long = &H0   '//Enable sequential record in fill and halt mode (default)
Public Const SEQCFG_DISABLE As Long = &H1    '//Disable sequential record
Public Const SEQCFG_CONTINUOUS As Long = &H2 '//Enable sequential record in continuous mode
Public Const SEQCFG_DMA As Long = &H4    '//Enable monitor in DMA mode
Public Const SEQCFG_FREE As Long = &H8   '//Enable sequential record in free mode
Public Const SEQCFG_DELTA As Long = &H10  '//Enable sequential record in delta mode
Public Const SEQCFG_INTERVAL As Long = &H20   '//Enable sequential record in interval mode
Public Const SEQCFG_NOLOGFULL As Long = &H0  '//Do not generate event log when sequential record is full (default)
Public Const SEQCFG_LOGFULL As Long = &H1000    '//Generate event log when sequential record is full
Public Const SEQCFG_NOLOGFREQ As Long = &H0  '//Do not generate event logs at a user specified frequency (default)
Public Const SEQCFG_LOGFREQ As Long = &H2000    '//Generate event logs at user specified frequency
Public Const SEQCFG_TCPNODELAY As Long = &H4000 '//Disable Nagle's algorithm on sequential DMA for RPC devices
Public Const SEQCFG_16K As Long = &H0    '//Allocate a 16K sequential record buffer (default)
Public Const SEQCFG_ALLAVAIL As Long = &H1000000   '//Allocate all available memory to a sequential record buffer
Public Const SEQCFG_32K As Long = &H2000000    '//Allocate a 32K sequential record buffer
Public Const SEQCFG_64K As Long = &H4000000    '//Allocate a 64K sequential record buffer
Public Const SEQCFG_128K As Long = &H8000000   '//Allocate a 128K sequential record buffer

'/**
'*
'*  Sequential Record type fields
'*
'**/

Public Const SEQTYPE_MASK As Long = &HFF  '//Sequential record type mask value
Public Const SEQTYPE_429 As Long = &H1   '//Sequential record type is ARINC 429
Public Const SEQTYPE_717 As Long = &H2   '//Sequential record type is ARINC 717
Public Const SEQTYPE_1553 As Long = &H3  '//Sequential record type is MIL-STD-1553
Public Const SEQTYPE_708 As Long = &H4   '//Sequential record type is ARINC 708
Public Const SEQTYPE_USER As Long = &H5  '//Sequential record type is User Defined
Public Const SEQTYPE_CSDB As Long = &H6  '//Sequential record type is CSDB
Public Const SEQTYPE_DIO As Long = &H7   '//Sequential record type is DIO
Public Const SEQTYPE_EBR As Long = &H8   '//Sequential record type is EBR-1553
Public Const SEQTYPE_717SF As Long = &H9 '//Sequential record type is ARINC 717 Subframe
Public Const SEQTYPE_PMC10 As Long = &HA '//Sequential record type is PMC10
Public Const SEQTYPE_RESTART As Long = &HFF   '//Sequential record type is Restart

'/**
'*
'*  Sequential Record version fields
'*
'**/

Public Const SEQVER_MASK As Long = &HFF00   '//Sequential record version mask value
Public Const SEQVER_0 As Long = &H0  '//Sequential record version number is 0
Public Const SEQVER_1 As Long = &H100  '//Sequential record version number is 1

'/**
'*
'*  Event log list configuration options
'*
'**/

Public Const LOGCFG_DEFAULT As Long = &H0    '//Select all default settings
Public Const LOGCFG_ENABLE As Long = &H0 '//Enable event log list (default)
Public Const LOGCFG_DISABLE As Long = &H1    '//Disable event log list

'/**
'*
'*  IRIG timer configuration options
'*
'**/

Public Const IRIGCFG_DEFAULT As Long = &H0   '//Select all default settings
Public Const IRIGCFG_ENABLE As Long = &H0    '//Enable IRIG timer (default)
Public Const IRIGCFG_DISABLE As Long = &H1   '//Disable IRIG timer
Public Const IRIGCFG_SPEEDB As Long = &H0    '//Bit rate is IRIGB (default)
Public Const IRIGCFG_SPEEDA As Long = &H2    '//Bit rate is IRIGA
Public Const IRIGCFG_INTERNAL As Long = &H0  '//IRIG timer operates internally (default)
Public Const IRIGCFG_EXTERNAL As Long = &H4  '//IRIG timer operates externally
Public Const IRIGCFG_SLAVE As Long = &H0 '//IRIG timer is a slave  / receiver (default)
Public Const IRIGCFG_MASTER As Long = &H8    '//IRIG timer is a master / transmitter
Public Const IRIGCFG_PPS As Long = &H10   '//IRIG timer operates in PPS mode (rcv/xmt)
Public Const IRIGCFG_PWM As Long = &H0   '//IRIG timer uses pulse width modulated signaling (rcv/xmt) (default)
Public Const IRIGCFG_AM As Long = &H20    '//IRIG timer uses amplitude modulated signaling (rcv/xmt hw dependant)

'/**
'*
'*  IRIG timer field definitions
'*
'**/

Public Const IRIGFIELD_USECLSB As Long = &H0 '//Microseconds LSB in timestamp field
Public Const IRIGFIELD_USECMSB As Long = &HB '//Microseconds MSB in timestamp field
Public Const IRIGFIELD_MSECLSB As Long = &HC '//Milliseconds LSB in timestamp field
Public Const IRIGFIELD_MSECMSB As Long = &H17 '//Milliseconds MSB in timestamp field
Public Const IRIGFIELD_SECLSB As Long = &H18  '//Seconds LSB in timestamp field
Public Const IRIGFIELD_SECMSB As Long = &H1F  '//Seconds MSB in timestamp field
Public Const IRIGFIELD_MINLSB As Long = &H0  '//Minutes LSB in timestamph field
Public Const IRIGFIELD_MINMSB As Long = &H7  '//Minutes MSB in timestamph field
Public Const IRIGFIELD_HRSLSB As Long = &H8  '//Hours LSB in timestamph field
Public Const IRIGFIELD_HRSMSB As Long = &HF  '//Hours MSB in timestamph field
Public Const IRIGFIELD_DAYLSB As Long = &H10  '//Days LSB in timestamph field
Public Const IRIGFIELD_DAYMSB As Long = &H1B  '//Days MSB in timestamph field

'/**
'*
'*  C54x Global Registers
'*
'**/
